--- a/frontend/styles/pages/checkout.scss
+++ b/frontend/styles/pages/checkout.scss
@@ -115,11 +115,6 @@
     }
   }
 
-  .step-1 {
-    .radio-box {
-      display: block;
-    }
-  }
 
   .radio-box {
     margin: 15px 0;
@@ -439,6 +434,11 @@
           &:nth-child(2),
           &:nth-child(3) {
             display: block;
+          }
+
+          &:nth-child(4),
+          &:nth-child(5) {
+            display: none;
           }
         }
       }
