--- a/frontend/styles/pages/index.scss
+++ b/frontend/styles/pages/index.scss
@@ -113,7 +113,7 @@
 
   .button-block {
     background-color: $color-white;
-    padding: 0 8px;
+    padding: 10px 8px 0px 8px;
   }
 
   .function {
